# py0g

./: .gitignore  ENHANCED_INTERACTOR_GUIDE.md  INTERACTOR_GUIDE.md  ROADMAP.md  contract_interactor.py  deployment_summary.md  evm_stack_fix_demo.py  py0g_interactor.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  test_enhanced_interactor.py  test_simple.py  verify_deployment.py
MyProject/: README.md  py0g.config.json
MyProject/contracts/: MyProject.py
MyProject/scripts/: deploy.py
MyProject/tests/: test_MyProject.py
StakingContract/: .gitignore  README.md  py0g.config.json  test_staking.py
StakingContract/contracts/: StakingContract.py
StakingContract/scripts/: deploy.py
StakingContract/tests/: test_StakingContract.py
fu/: README.md  py0g.config.json
fu/contracts/: fu.py
fu/scripts/: deploy.py
fu/tests/: test_fu.py
nii/: .gitignore  README.md  py0g.config.json
nii/contracts/: blockchain_interact.py  demo_full_workflow.py  interact_strk.py  nii.py  project_status.md  simple_counter.py  strk.py  strk_operations.py
nii/scripts/: deploy.py
nii/tests/: test_nii.py
py0g/: __init__.py  __main__.py  cli.py  compiler.py  compute.py  debugger.py  deployer.py  hasher.py  init.py  prover.py  security.py  storage.py  verifier.py
templates/: ai_oracle.py  defi_dex.py
tests/: test_compiler.py
we/: README.md  py0g.config.json
we/contracts/: we.py
we/scripts/: deploy.py
we/tests/: test_we.py
