[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py0g"
version = "0.2.0"
description = "Python-first smart contract CLI for 0G Galileo blockchain"
authors = [{name = "0G Python SDK Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "typer>=0.9.0",
    "web3>=6.0.0",
    "eth-utils>=2.1.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
py0g = "py0g.cli:app"

[project.urls]
Homepage = "https://github.com/0g-ai/py0g"
Documentation = "https://docs.0g.ai/py0g"
Repository = "https://github.com/0g-ai/py0g"
Issues = "https://github.com/0g-ai/py0g/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["py0g*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
